Completed CSS animations and Fixed navbar stretch goals

--- a/css/index.css
+++ b/css/index.css
@@ -198,6 +198,44 @@ p {
   color: white;
   cursor: pointer;
 }
+.fixed-navigation {
+  display: flex;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid darkgrey;
+  opacity: 0.9;
+}
+.fixed-navigation header {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.fixed-navigation header nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 2%;
+  width: 70%;
+}
+.fixed-navigation header nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #7C7175;
+  font-size: 1.6rem;
+  transition: 0.2s;
+}
+.fixed-navigation header nav a:hover {
+  transform: scale(1.1);
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
